# wxdsgn

devpak_batchmaker/: DevPakBuilding.txt  Project1.dev  Project10.dev  Project11.dev  Project2.dev  Project3.dev  Project4.dev  Project5.dev  Project6.dev  Project9.dev  chartart.vc  common_vars.bat  copydev.bat  my_common_vars.bat  scintilla.gcc  scintilla.vc  set_base.bat  set_contribs.bat  set_extras.bat  sheet.gcc  things.gcc  treelistctrl.vc  treemultictrl.gcc  treemultictrl.vc  widgets.dev  wxWidgets.bat  wxWidgets_3rdParty.bat  wxWidgets_Base.bat  wxWidgets_Contrib.bat  wxWidgets_bcc.DevPackage  wxWidgets_bcc_contrib.DevPackage  wxWidgets_bcc_extras.DevPackage  wxWidgets_common.DevPackage  wxWidgets_contrib_common.DevPackage  wxWidgets_dmc.DevPackage  wxWidgets_dmc_contrib.DevPackage  wxWidgets_dmc_extras.DevPackage  wxWidgets_extras_common.DevPackage  wxWidgets_gcc.DevPackage  wxWidgets_gcc_contrib.DevPackage  (+5 more)
devpak_batchmaker/wxCode/wxTreeMultiCtrl/contrib/samples/treemultictrl/: CMakeLists.txt  MultiCtrlTest.cpp
packmaker2extended/: ActionDlg.cpp  ActionDlg.h  ActionDlg.wxform  ActionForm.cpp  ActionForm.h  ActionForm.wxform  BuildForm.cpp  BuildForm.h  BuildForm.wxform  CommonOpenSourceLicenses.h  Doxyfile  File Format.txt  FileForm.cpp  FileForm.h  FileForm.wxform  Makefile.win  MenuForm.cpp  MenuForm.h  MenuForm.wxform  PackMaker2.dev  PackMaker2.layout  PackMaker2App.cpp  PackMaker2App.h  PackMaker2App.rc  PackMaker2Frm.cpp  PackMaker2Frm.h  PackMaker2Frm.wxform  PackageClasses.cpp  PackageClasses.h  STFileUtils.cpp  STFileUtils.h  WizardBasedDlg.cpp  (+2 more)
(+1835 files in other folders)
